kubernetesTemplate/astroluma/04-astroluma-mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: astroluma-mongo
  namespace: dashboard
spec:
  selector:
    app: astroluma-mongo
  ports:
    - port: 27017
      targetPort: 27017
  type: NodePort
