kubernetesTemplate/astroluma/02-astroluma-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: astroluma-ingress
  namespace: dashboard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: astroluma.vladsdomain.live
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: astroluma
                port:
                  number: 8000
